@@ -14,7 +14,10 @@
   <name>spring-chronicle</name>
   <description>Demo project for Spring Boot</description>
   <properties>
-    <java.version>21</java.version>
+    <java.version>17</java.version>
+    <maven.compiler.release/>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
@@ -66,6 +69,24 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <compilerArgs>
+            <args>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</args>
+            <args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</args>
+            <args>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</args>
+            <args>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</args>
+            <args>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</args>
+            <args>--add-opens=java.base/java.lang=ALL-UNNAMED</args>
+            <args>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</args>
+            <args>--add-opens=java.base/java.io=ALL-UNNAMED</args>
+            <args>--add-opens=java.base/java.util=ALL-UNNAMED</args>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
